# todo_app

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: audit.yaml  check.yaml  dependabot.yaml  test.yaml
bench/: Dockerfile_bench  Dockerfile_gentokens  build.sh  docker-compose.bench.yml  run.sh
bench/bench_scripts/: common.js  crud.js  full.js  login.js  promote_user.js  registration.js
bench/gentokens/: .dockerignore  Cargo.toml  tokens.json
bench/gentokens/src/: client.rs  error.rs  main.rs
compose/: Dockerfile.dev  docker-compose.dev.yml  docker-compose.observability.yml
compose/grafana/dashboards/: auth.json  k6_bench.json  todo_app.json  windows_node_exporter.json
compose/grafana/provisioning/dashboards/: dashboards.yml
compose/grafana/provisioning/datasources/: prometheus.yml  tempo.yml
compose/otel/: otel-collector-config.yaml
compose/prometheus/: prometheus.yml
compose/tempo/: tempo.yaml
config/: bench.toml  default.toml  development.toml  production.toml  test.toml
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs  types.rs
src/docs/: mod.rs  openapi.rs
src/handlers/: admin.rs  auth.rs  error.rs  mod.rs  todo.rs  types.rs
src/init/: mod.rs  observability.rs  storage.rs
src/middleware/: auth.rs  metrics.rs  mod.rs  rate_limiter.rs  role.rs  trace_root.rs
src/middleware/auth/: tests.rs
src/service/: auth.rs  jwt.rs  mod.rs  todo.rs  user.rs
src/service/password/: argon2.rs  mod.rs  pbkdf2.rs
src/storage/: error.rs  mod.rs  page.rs  session.rs  todo.rs  user.rs
src/storage/ids/: macros.rs  mod.rs
src/storage/sled/: error.rs  flush_impl.rs  mod.rs  session_impl.rs  todos_impl.rs  users_impl.rs
src/storage/sled/internal/: key.rs  mod.rs  span_wrappers.rs  tree_scan.rs
src/storage/sled/session_impl/: tests.rs
src/storage/sled/test_util/: mod.rs
src/storage/sled/todos_impl/: tests.rs
src/storage/sled/users_impl/: tests.rs
src/utils/: blocking_task_guard.rs  jemalloc_metrics.rs  measure_metrics.rs  metrics.rs  mod.rs  root_span.rs
tests/: access_control.rs  auth.rs  todos.rs  tokens.rs  users_admin.rs
tests/common/: client.rs  mod.rs  server.rs
