[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
integration_tests = []
jemalloc = ["jemallocator", "jemalloc-ctl"]

[dev-dependencies]
todo_app = { path = ".", features = ["integration_tests"] }
http = "1.3"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
bincode = "2.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures-util = "0.3.31"
headers = "0.4.0"
jsonwebtoken = "9.3.1"
opentelemetry = { version = "0.30.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["metrics", "trace"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full", "tracing"] }
tower = { version = "0.5.2", features = ["buffer", "limit"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-attributes = "0.1.29"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
once_cell = "1.21"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
ring = "0.17.14"
base64 = "0.22.1"
rand = "0.9.1"
dotenv = "0.15.0"
config = "0.15.11"
hyper = "1.6.0"
http-body-util = "0.1.3"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
argon2 = { version = "0.5.3", features = ["std"] }
sysinfo = "0.35.1"
jemallocator = { version = "0.5.4", optional = true, features = ["stats", "unprefixed_malloc_on_supported_platforms"] }
jemalloc-ctl = {version = "0.5.4", optional = true }
num_cpus = "1.17.0"
governor = "0.10.0"
moka = { version = "0.12.10", features = ["future"] }
tracing-log = "0.2.0"
serial_test = "3.2.0"
dashmap = "6.1.0"
