[package]
name = "gentokens"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
random-string = "1.1.0"
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
